# claude-tap

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  IMPLEMENTATION_PLAN.md  LICENSE  OPENCLAW_README.md  PROMPT_build.md  README.md  README_zh.md  WS_VERIFY_REPORT.md  demo.tape  loop.sh  pyproject.toml  test_and_view.sh  test_e2e.py  test_e2e_tap.sh
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/: pull_request_template.md
claude_tap/: __init__.py  __main__.py  bedrock.py  certs.py  chat.html  cli.py  cli_clients.py  cli_update.py  codex_app_cdp.py  codex_app_transcript.py  compact_trace.py  continuation.py  dashboard.html  dashboard.py  export.py  forward_proxy.py  global_inject.py  history.py  import_resume.py  live.py  macos_app.py  macos_bundle.py  process_utils.py  prompt_snapshot.py  proxy.py  session_transplant.py  shared_dashboard.py  sse.py  trace.py  trace_log_handler.py  trace_store.py  usage.py  viewer.html  viewer.py  viewer_i18n.json  ws_proxy.py
docs/: index.html  index.zh.html  robots.txt  sitemap.xml  support-matrix.md  support-matrix.zh.md
prompts/: pr-review-prompt.md
scripts/: README.md  agent_runner.py  agent_task_ctl.sh  agent_watchdog.py  check_changelog.py  check_coverage.py  check_legibility.py  check_pr.sh  check_pr_policy.py  check_screenshots.py  check_screenshots.sh  gen_architecture.py  pr_review_bot.py  pr_review_bot_config.py  record_viewer.py  run_real_e2e.sh  run_real_e2e_tmux.sh  start_review_bot.sh  translate_i18n.py  update_changelog.py  verify_screenshots.py
(+252 files in other folders)
